--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "eoplatform"
 version = "0.1.0"
-description = "Earth Observation (EO) Platforms made easy"
+description = "Earth Observation made easy."
 authors = ["Matthew Tralka <matthew@tralka.xyz>"]
 maintainers = ["Matthew Tralka <matthew@tralka.xyz>"]
 license = "GPL-3.0-only"
 repository = "README.md"
-keywords = ["remote sensing", "earth observation", "gis", "education", "download"]
+keywords = ["remote sensing", "earth observation", "gis", "education"]
 
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -25,6 +25,7 @@ typer = {extras = ["all"], version = "^0.4.0"}
 black = "^21.9b0"
 mypy = "^0.910"
 notebook = "^6.4.5"
+pre-commit = "^2.15.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
