--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,10 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = ">=3.7,<3.11"
 rich = "^10.12.0"
 typer = {extras = ["all"], version = "^0.4.0"}
+numpy = "^1.21.3"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
@@ -36,3 +37,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 eoplatform = 'eoplatform.cli:app'
+
+[tool.mypy]
+plugins = 'numpy.typing.mypy_plugin'
