--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,7 +25,7 @@ jobs:
         key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
     - run: poetry --version
     - name: Install dependencies
-      run: poetry install --dev
+      run: poetry install
     - name: Run mypy
       run: mypy eoplatform --strict
     - name: Run black
