--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.11"
+python = "^3.8,<3.11"
 rich = "^10.12.0"
 typer = {extras = ["all"], version = "^0.4.0"}
 numpy = "^1.21.3"
