--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "eoplatform"
-version = "0.2.2"
+version = "0.2.3"
 description = "Earth Observation made easy."
 authors = ["Matthew Tralka <matthew@tralka.xyz>"]
 maintainers = ["Matthew Tralka <matthew@tralka.xyz>"]
@@ -16,11 +16,11 @@ classifiers = [
     "Intended Audience :: Science/Research",
     "Intended Audience :: Education",
     "Intended Audience :: Developers",
-    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.7,<3.11"
+python = "^3.8,<3.11"
 rich = "^10.12.0"
 typer = {extras = ["all"], version = "^0.4.0"}
 numpy = "^1.21.3"
